--- a/ECommerce/css/nosotros.css
+++ b/ECommerce/css/nosotros.css
@@ -44,7 +44,7 @@ main {
 .nosotros-img img {
   max-width: 80%;
   border-radius: 10px;
-  box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+  box-shadow: 0 16px 30px rgba(199, 45, 175, 0.42);
 }
 .valores-container {
   max-width: 1000px;
@@ -66,7 +66,7 @@ main {
 .valor {
   background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+  box-shadow: 0 16px 30px rgba(32, 17, 30, 0.22);
   flex: 1.2;
   min-width: 250px;
   max-width: 300px;
