--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 
-main {
+.nosotros {
     padding: 20px;
 }
 
-.nosotros-container {
+.nosotros {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -17,94 +17,22 @@ main {
   border-radius: 15px;
 }
 
-.nosotros-info {
+.nosotros {
   flex: 1;
   min-width: 300px;
   padding: 20px;
 }
 
-.nosotros-info h1 {
+.nosotros h1 {
   margin-bottom: 15px;
   color: #222;
 }
 
-.nosotros-info p {
+.nosotros p {
   line-height: 1.6;
   color: #555;
   margin-bottom: 10px;
   font-family: 'Montserrat', sans-serif;
 }
 
-.nosotros-img {
-  flex: 1;
-  min-width: 280px;
-  text-align: center;
-}
-
-.nosotros-img img {
-  max-width: 80%;
-  border-radius: 10px;
-  box-shadow: 0 16px 30px rgba(199, 45, 175, 0.42);
-}
-.valores-container {
-  max-width: 1000px;
-  text-align: center;
-}
-
-.valores-container h2 {
-  color: #222;
-  margin-bottom: 25px;
-}
-
-.valores-items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-}
-
-.valor {
-  background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 16px 30px rgba(32, 17, 30, 0.22);
-  flex: 1.2;
-  min-width: 250px;
-  max-width: 300px;
-
-}
-
-.valor h3 {
-  margin-bottom: 10px;
-  color: #444;
-}
-
-.valor p {
-  color: #666;
-  line-height: 1.5;
-}
-.footer-nosotros {
-  background-color: #222;
-  color: white;
-  padding: 30px 20px;
-  text-align: center;
-  margin-top: 50px;
-}
-
-.footer-nosotros h3 {
-  margin-bottom: 15px;
-  color: #ffcc00;
-}
-
-.footer-nosotros p {
-  margin: 5px 0;
-}
-
-.footer-nosotros a {
-  color: #ffcc00;
-  text-decoration: none;
-}
-
-.footer-nosotros a:hover {
-  text-decoration: underline;
-}
 
