activacion de los botones editar y actualizar para que se puedan generar los cambios en la web

--- a/css/alta.css
+++ b/css/alta.css
@@ -139,6 +139,21 @@
     color: black;
 }
 
+.alta table button[id^="btnCancelar-"]{
+    background-color: black;
+    color: gold;
+}
+
+.alta .btnActualizar{
+    background-color:gold;
+    color: #222;
+
+}
+
+.alta .btnAgregar{
+    background-color:#6ab04c;
+    color: #130f40;
+}
 
 
 
