se armo el carrito de compras generando botones de borrar y editar para poder generar cambios desde el carrito de compras y se hizo dos archivos mas en JS relacionado al carritp de compras

--- a/css/alta.css
+++ b/css/alta.css
@@ -78,11 +78,6 @@
     padding: 10px;
 }
 
-.alta table {
-    border-collapse: collapse;
-    margin: 5px auto;
-  
-}
 
 .alta th {
     text-transform: uppercase;
@@ -132,6 +127,11 @@
    background-color: #b63625;
    color: aliceblue;
 }
+
+.alta table button[id^="btnBorrar-"]:disabled  {
+   opacity: 0.5;
+}
+
 
 
 .alta table button[id^="btnEditar-"]{
